# astroflow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  configure.sh  emty_dir_couter.py  pyproject.toml  requirements.txt  rfi_reverse.py  task.yaml
.github/workflows/: release.yml  release_testpypi.yml  ubuntu-22.04-build.yml  wheels-linux.yml
docker/manylinux_2_28_cuda129_x86_64/: Dockerfile
docs/: README_zh-CN.md  fast_prex.md  fast_prex_zh-CN.md  quick_start.md  quick_start_zh-CN.md
docs/candidates/: fast_prex_candidate.csv
include/: aidetection.h  api.h  astrofunc.h  boxcardetection.h  candidate.h  cfits.h  corecal.h  cpp_code.h  cpucal.h  cpucal.hpp  data.h  dedispered.hpp  detection.h  fdmt.h  filterbank.h  gpucal.h  iqrm.hpp  iqrmcuda.h  marcoutils.h  matplotlibcpp.h  plot.h  plot.hpp  psrdada.h  pyapi.h  rfi.h  rfimarker.h  rfimarker_cpu.h
python/: adder.py  astroflow.py  async_demo.py  center_net.py  centernet_utils.py  demo.py  fdmt_gpu.py  fdmt_test.py  find_frb.py  gendataset.py  generate_dataset.py  main.py  plot_ded_spectrum.py  plotspec.py  requirements.txt  search_dataset.py  single_pulsar_dm.py  single_pulsar_search_dm_dir.py  single_search.py  specplot.py  test_fil.py  train_demo.py
python/astroflow/: __init__.py  dedispered.py  dmtime.py  filterbank.py  frbdetector.py  logger.py  plotter.py  search.py  specplot.py  spectrum.py  utils.py
python/astroflow/config/: rficonfig.py  taskconfig.py
python/astroflow/dataset/: chime.py  fetch.py  generate.py  quest.py
python/astroflow/io/: data.py  filterbank.py  psrfits.py
python/astroflow/model/: centernetutils.py
python/astroflow/plotting/: __init__.py  analysis.py  io.py  pipeline.py  plots.py  types.py
python/astroflow/train/: dataset.py
python/dataset/: chime.py  draft.py  fetch.py  quest.py
python/docs/: synthetic_dataset_generator.md
python/examples/: generate_synthetic_example.py
python/scripts/: batch_rfi_mask.py  rfi_mask.py
python/tests/: test_dedispered.py  test_fil.py  test_psrfits.py  test_taskconfig.py
src/: astrofunc.cpp  filterbank.cpp  main.cpp
src/api/: pyapi.cpp
src/bindpy/: bindings.cpp  cpp_code.cpp  cuda_kernel.cu  frb_snr.cpp  pyapi.cpp
src/core/: corecal.cpp  cpucal.cpp  dedispered.cu  dedispered.cu_1  gpucal.cpp  iqrm.cu
src/data/: cfits.cpp  data.cpp  filterbank.cpp  plot.cpp  psrdada.cpp
src/demo/: bindings.cpp
src/detection/: aidetection.cpp  boxcardetection.cpp
src/rfi/: rfimarker.cpp  rfimarker.cu  rfimarker_cpu.cpp
tests/: test_astrofunc.cpp  test_dedisperd.cpp  test_dedispered_data.cpp  test_dynamic_array.cpp  test_fil.cpp  test_filterbank.cpp  test_gtest.cpp  test_init.cpp  test_qlfil.cpp
